--- a/kontakt.html
+++ b/kontakt.html
@@ -14,8 +14,8 @@
 
   </style>
 </head>
-<body style="background-color:#cee8ff;">
-<nav class="navbar  navbar-expand-md  navbar-dark"style="background-color:#005282;">
+<body style="background-color:#e2e2e2;">
+<nav class="navbar  navbar-expand-md  navbar-dark bg-dark">
 	<div class="container">
 		<a class="navbar-brand" href="index.html"> eProdavnica </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sazimajuciKontejner">
@@ -61,7 +61,7 @@
 				<a href="#">Google+ u <br> <i class="fa fa-google-plus" style="font-size:42px"></i></a><br>
 			</p>
 			<div class="text-center">
-      <button class="btn btn-primary mb-5" data-toggle="collapse" data-target="#komentar-forma">
+      <button class="btn btn-secondary mb-5" data-toggle="collapse" data-target="#komentar-forma">
         Ostavi komentar
       </button>
     </div>
@@ -72,7 +72,7 @@
         <input type="text" id="ime" class="form-control" placeholder="Unesite vase ime i prezime" required />
         <label for="komentar">Vas komentar:</label>
         <textarea type="text" id="komentar" class="form-control" placeholder="Unesite vas komentar" required></textarea>
-        <input type="submit" class="btn btn-primary mt-1 "  value="Komentariši!" />
+        <input type="submit" class="btn btn-secondary mt-1 "  value="Komentariši!" />
 
       </form>
 	  
@@ -119,7 +119,7 @@
 </div>
 
 <br><br><br>
-  <footer class="footer  "style="background-color:#005282;">
+  <footer class="footer  bg-dark">
     <div class="container text-center pt-2 pr-1 text-light">
       eProdavnica
       <span class="d-none d-md-inline"> projekat iz IČR </span>&copy;
