--- a/muskarci.html
+++ b/muskarci.html
@@ -13,9 +13,9 @@
 
   </style>
 </head>
-<body style="background-color:#ede0c7;">
+<body style="background-color:#e2e2e2;">
 
-<nav class="navbar  navbar-expand-md  navbar-dark" style="background-color:#685d4a;">
+<nav class="navbar  navbar-expand-md bg-dark  navbar-dark" >
 	<div class="container">
 		<a class="navbar-brand" href="index.html"> eProdavnica </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sazimajuciKontejner">
@@ -48,9 +48,9 @@
 </nav>
 
 <div class="container pt-3" > 
-	<div class="jumbotron text-light" style="background-color:#7c6f58;">
-		<h1 style="background-color:#7c6f58;"> Muški kutak </h1>
-		<p style="background-color:#7c6f58;"> Najveci izbor u regionu. Ponosno kupujte bez brige o kvalitetu. </p>
+	<div class="jumbotron text-light bg-dark" >
+		<h1 > Muški kutak </h1>
+		<p > Najveci izbor u regionu. Ponosno kupujte bez brige o kvalitetu. </p>
 	</div>
 </div>
 	<div class="container">
@@ -163,8 +163,8 @@
 	</div>
 
 
-  <footer class="footer " style="background-color:#685d4a;">
-    <div class="container text-center pt-2 pr-1 text-light">
+  <footer class="footer bg-dark">
+    <div class="container text-center pt-2 pr-1 text-light ">
       eProdavnica
       <span class="d-none d-md-inline"> projekat iz IČR </span>&copy;
     </div>
