--- a/deca.html
+++ b/deca.html
@@ -13,9 +13,9 @@
 
   </style>
 </head>
-<body style="background-color:#daffa8;">
+<body style="background-color:#e2e2e2;">
 
-<nav class="navbar  navbar-expand-md  navbar-dark" style="background-color:#7a9358;">
+<nav class="navbar  navbar-expand-md  navbar-dark bg-dark" >
 	<div class="container">
 		<a class="navbar-brand" href="index.html"> eProdavnica </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sazimajuciKontejner">
@@ -48,7 +48,7 @@
 </nav>
 
 <div class="container">
-	<div class="container-fluid text-center pt my-2 text-light rounded " style="background-color:#83a05b; ">
+	<div class="container-fluid text-center pt my-2 text-light rounded bg-dark" >
 		<h1> SVE ZA VAŠE MALIŠANE! </h1>
 	</div>
 	<div class="container-fluid  py-1 mt-2 mb-2 bg-primary">
@@ -135,7 +135,7 @@
 
 
 
-  <footer style="background-color:#7a9358" class="footer">
+  <footer  class="footer bg-dark">
     <div class="container text-center pt-2 pr-1 text-light">
       eProdavnica
       <span class="d-none d-md-inline "> projekat iz IČR </span>&copy;
