--- a/galerija.html
+++ b/galerija.html
@@ -13,9 +13,9 @@
 
   </style>
 </head>
-<body style="background-color:#ffe4c1;">
+<body style="background-color:#e2e2e2;">
 
-<nav class="navbar  navbar-expand-md  navbar-dark" style="background-color:#c46400;">
+<nav class="navbar  navbar-expand-md  navbar-dark  bg-dark" >
 	<div class="container">
 		<a class="navbar-brand" href="index.html"> eProdavnica </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sazimajuciKontejner">
@@ -47,7 +47,7 @@
 	</div>
 </nav>
 
-<div class="container">
+<div class="container" style=" margin-bottom: 10px">
 	<div class="text-center">
 		<h1>Sva sniženja možete naći u ovoj galeriji!</h1>
 	</div>
@@ -222,7 +222,7 @@
 
 
 
-  <footer class="footer " style="background-color:#c46400;">
+  <footer class="footer bg-dark" >
     <div class="container text-center pt-2 pr-1 text-light">
       eProdavnica
       <span class="d-none d-md-inline"> projekat iz IČR </span>&copy;
