--- a/zene.html
+++ b/zene.html
@@ -13,10 +13,10 @@
 
   </style>
 </head>
-<body style="background-color:#ecd1ff;">
+<body style="background-color:#e2e2e2;">
 
 
-<nav class="navbar  navbar-expand-md  navbar-dark" style="background-color:#5c3c72;">
+<nav class="navbar  navbar-expand-md  navbar-dark bg-dark" >
 	<div class="container">
 		<a class="navbar-brand" href="index.html"> eProdavnica </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sazimajuciKontejner">
@@ -48,8 +48,8 @@
 	</div>
 </nav>
 
-<div class="container pt-3" "> 
-	<div class="jumbotron" style="background-color:#7a4e99;color:white;">
+<div class="container pt-3" > 
+	<div class="jumbotron bg-dark" style="color:white;">
 		<h1> Ženski kutak </h1>
 		<p> Najveci izbor u regionu. Ponosno kupujte bez brige o kvalitetu. </p>
 	</div>
@@ -165,7 +165,7 @@
 
 
 
-  <footer class="footer " style="background-color:#5c3c72;">
+  <footer class="footer bg-dark" >
     <div class="container text-center pt-2 pr-1 text-light">
       eProdavnica
       <span class="d-none d-md-inline"> projekat iz IČR </span>&copy;
