--- a/kontakt.html
+++ b/kontakt.html
@@ -82,7 +82,7 @@
 		<div  class="col-md-6  ">
 		
 				<div class="card text-center my-4">
-					<img class="card-img-top" src="slike/card.png">
+					<img class="card-img-top" src="slike/card.jpg">
 					<div class="card-body">
 						<h5 class="card-title">Glavna lokacija</h5>
 						<p class="card-text">Ulica: Vojvode Stepe 283<br>Telefon: 011/123-4567</p>
